5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1756_674.log
== TEST (2019-05-22 12:49:27) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
a = array(eval(input("")))
print(size(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    a = array(eval(input("")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:49:48) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:51:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:51:56) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:53:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
print(max(a))
print(min(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:55:10) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
print(max(a))
print(min(a))
print(sum(a))
print(sum(a)) / size(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:57:50) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
print(max(a))
print(min(a))
print(sum(a))
print(sum(a)) / size(a) , 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:58:10) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
print(max(a))
print(min(a))
print(sum(a))
print(sum(a)) / size(a) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:58:30) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
print(max(a))
print(min(a))
print(sum(a))
print(sum(a))/size(a) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:58:59) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
print(max(a))
print(min(a))
print(sum(a))
print(sum(a))/:size(a) 
-- ERROR:
File "XXXX", line 11
    print(sum(a))/:size(a) 
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:59:50) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
print(max(a))
print(min(a))
print(sum(a))
print(sum(a)) / size(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:00:27) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
print(max(a))
print(min(a))
print(sum(a))
print(sum(a) / size(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 13:00:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
print(max(a))
print(min(a))
print(sum(a))
print(sum(a) / size(a))
-- EXECUTION TIME:
0.365295
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.647727272727273
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:00:57) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
print(max(a))
print(min(a))
print(sum(a))
print(sum(a) / size(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:01:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
print(max(a))
print(min(a))
print(sum(a))
print(sum(a) / size(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:02:40) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
print(max(a))
print(min(a))
print(sum(a))
print(round(sum(a) / size(a)), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:02:50) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
print(max(a))
print(min(a))
print(sum(a))
print(round(sum(a) / size(a)), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:03:16) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
print(max(a))
print(min(a))
print(sum(a))
print(round(sum(a) / size(a)),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:07:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
print(max(a))
print(min(a))
print(sum(a))
b = (sum(a) / size(a))
print(round(b,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 13:07:34) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
a = array(eval(input("")))
print(size(a))
print(a[0])
print(a[4])
print(max(a))
print(min(a))
print(sum(a))
b = (sum(a) / size(a))
print(round(b,2))
-- EXECUTION TIME:
0.424263
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
